# CLICalendar

./: .gitignore  CLICalendar.pro  README.md  dirty_hack  god_file.cpp  god_gile.cpp  linker settings  main.cpp  operationsWithDbDRAFT  todo
CLICalendarClient/: CLICalendarClient.cbp  CLICalendarClient.depend  CLICalendarClient.layout  CMakeLists.txt  accounts.sqlite  main.cpp
CLICalendarClient/include/: CMakeLists.txt  MD5.cpp  sqlite_orm.h
CLICalendarClient/src/: AccessProvider.cpp  AccessProvider.h  AccountsDbManager.cpp  AccountsDbManager.h  CMakeLists.txt  CommandChecker.cpp  CommandChecker.h  Day.cpp  Day.h  Deal.cpp  Deal.h  Important.cpp  Important.h  NetWorker.cpp  NetWorker.h  Note.cpp  Note.h  Session.cpp  Session.h  Task.cpp  User.cpp  User.h  spaceFilter.cpp  spaceFilter.h  split.cpp
CLICalendarServer/: CLICalendarServer.cbp  CLICalendarServer.depend  CLICalendarServer.layout  CMakeLists.txt  main.cpp
CLICalendarServer/include/: CMakeLists.txt  sqlite_orm.h
CLICalendarServer/src/: CMakeLists.txt  Day.cpp  Day.h  Deal.cpp  Deal.h  Important.cpp  Important.h  Note.cpp  Note.h  SEPARATOR.h  Task.cpp  Task.h  server.cpp  server.h  session.cpp  session.h  split.cpp  split.h
asioclient/: asioclient.cbp  asioclient.depend  asioclient.layout  chat_message.h  main.cpp
asioserver/: asioserver.cbp  asioserver.depend  asioserver.layout  main.cpp
asioserver/include/: sqlite3.h
client_part/include/: sqlite_orm.h
include/: MD5.cpp  MD5.h
server_part/: main.cpp
src/: AES.cpp  AES.h  MD5.h  black_magic.h  commandMonitor.cpp  commandMonitor.h  day.cpp  day.h  deal.cpp  deal.h  idatabase.cpp  idatabase.h  important.cpp  important.h  iuniqueid.cpp  iuniqueid.h  iversion.cpp  iversion.h  note.cpp  note.h  operationsWithDb.h  session.cpp  session.h  sqlite_orm.h  task.cpp  task.h  user.cpp  user.h  visitor.cpp  visitor.h
